# usage-tracking-system

./: .coverage  .dockerignore  .env  .env.example  ARCHITECTURE.md  Dockerfile.aggregation_service  Dockerfile.api_gateway  Dockerfile.event_processor  Dockerfile.query_service  README.md  README_aggregation_service.md  README_api_gateway.md  README_docker-compose.md  README_event_processing.md  README_query_service.md  docker-compose.yml  github-setup.md  migration.sql  pyproject.toml  requirements.txt  test.db
.claude/: settings.local.json
client_sdk/: __init__.py  examples.py  exceptions.py  usage_tracker.py
config/: settings.py
docker/: init-timescale.sql  nginx.conf  prometheus.yml
docker/grafana/dashboards/: dashboards.yml  logs-dashboard.json
docker/grafana/datasources/: loki.yml
docker/promtail/: promtail.yml
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: run.py
services/aggregation_service/: __init__.py  main.py
services/api_gateway/: __init__.py  main.py  middleware.py  schemas.py
services/event_processor/: __init__.py  main.py
services/query_service/: __init__.py  main.py  schemas.py
shared/database/: __init__.py  connection.py  repositories.py
shared/models/: __init__.py  aggregates.py  alerts.py  base.py  enums.py  services.py  types.py  usage_event.py
shared/utils/: __init__.py  billing.py  logging.py  metrics.py  validators.py
tests/: conftest.py  test_api_gateway.py  test_event_processor.py  test_models.py  test_sdk.py
